--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/lodash": "^4.14.54",
     "@types/react": "^15.0.11",
     "@types/react-dom": "^0.14.23",
+    "@types/react-redux": "^4.4.43",
     "awesome-typescript-loader": "^3.0.4",
     "babylonjs": "^3.0.1-alpha",
     "gulp": "^3.9.1",
@@ -18,6 +19,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-fontawesome": "^1.5.0",
+    "react-redux": "^5.0.5",
     "redux": "^3.6.0",
     "run-sequence": "^1.2.2",
     "source-map-loader": "^0.1.6",
