--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "awesome-typescript-loader": "^3.0.4",
     "babylonjs": "^3.0.1-alpha",
     "gulp": "^3.9.1",
+    "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-typescript": "^3.1.5",
