--- a/package.json
+++ b/package.json
@@ -15,13 +15,12 @@
     "uuid": "^3.0.1"
   },
   "devDependencies": {
-    "react-scripts": "0.9.5",
-    "custom-react-scripts": "0.0.23"
+    "react-scripts-ts": "^2.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "react-scripts-ts start",
+    "build": "react-scripts-ts build",
+    "test": "react-scripts-ts test --env=jsdom",
+    "eject": "react-scripts-ts eject"
   }
 }
