--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.6.0",
   "private": true,
   "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "@types/react": "^15.0.38",
     "babylonjs": "^3.0.1-alpha",
     "lodash": "^4.17.4",
+    "material-ui": "^0.18.6",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "react-fontawesome": "^1.5.0",
     "react-redux": "^5.0.5",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "superagent": "^3.5.2",
     "superagent-promise": "^1.1.0",
