--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.6.0",
   "private": true,
   "dependencies": {
+    "@types/lodash": "^4.14.71",
     "@types/react": "^15.0.38",
     "babylonjs": "^3.0.1-alpha",
     "lodash": "^4.17.4",
