--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "web-game",
-  "version": "0.6.0",
+  "--version": "0.6.0",
+  "homepage": "https://hejny.github.io/web-game/",
   "private": true,
   "dependencies": {
     "@types/lodash": "^4.14.71",
@@ -19,12 +20,16 @@
     "uuid": "^3.0.1"
   },
   "devDependencies": {
+    "gh-pages": "^1.0.0",
     "react-scripts-ts": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+
   }
 }
