--- a/articles/samples/5/package.json
+++ b/articles/samples/5/package.json
@@ -5,11 +5,13 @@
     "@types/node": "^8.0.19",
     "@types/react": "^16.0.0",
     "@types/react-dom": "^15.5.1",
+    "babylonjs": "^3.0.1-alpha",
+    "lodash": "^4.17.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-scripts-ts": "2.5.0",
     "redux": "^3.6.0",
-    "babylonjs": "^3.0.1-alpha"
+    "uuid": "^3.0.1"
   },
   "devDependencies": {},
   "scripts": {
