--- a/articles/samples/6/package.json
+++ b/articles/samples/6/package.json
@@ -9,6 +9,9 @@
     "lodash": "^4.17.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-fontawesome": "^1.5.0",
+    "react-tap-event-plugin": "^2.0.1",
+    "material-ui": "^0.18.6",
     "react-scripts-ts": "2.5.0",
     "redux": "^3.6.0",
     "uuid": "^3.0.1"
