--- a/articles/samples/6/package.json
+++ b/articles/samples/6/package.json
@@ -1,10 +1,8 @@
 {
   "name": "web-game",
   "dependencies": {
-    "@types/jest": "^20.0.5",
-    "@types/node": "^8.0.19",
-    "@types/react": "^16.0.0",
-    "@types/react-dom": "^15.5.1",
+    "@types/lodash": "^4.14.71",
+    "@types/react": "^15.0.38",
     "babylonjs": "^3.0.1-alpha",
     "lodash": "^4.17.4",
     "react": "^15.6.1",
