--- a/package.json
+++ b/package.json
@@ -3,6 +3,17 @@
   "--version": "0.6.0",
   "homepage": "https://hejny.github.io/web-game/",
   "private": true,
+
+    "scripts": {
+    "start": "react-scripts-ts start",
+    "build": "react-scripts-ts build",
+    "test": "react-scripts-ts test --env=jsdom",
+    "eject": "react-scripts-ts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "prettier": "prettier --config .prettierrc --write \"src/**/*.{ts,tsx,css}\" webpack.config.js",
+    "prettier-watch": "onchange --initial \"**/*.{ts,tsx,css}\" -- npm run prettier"
+  },
   "dependencies": {
     "@types/lodash": "^4.14.71",
     "@types/react": "^15.0.38",
@@ -21,14 +32,9 @@
   },
   "devDependencies": {
     "gh-pages": "^1.0.0",
-    "react-scripts-ts": "^2.4.0"
-  },
-  "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "react-scripts-ts": "^2.4.0",
+    "onchange": "^5.0.2",
+    "prettier": "^1.13.7"
   }
+
 }
